added new fail-over logic to handle cases where one to all servers under the load balancer fails